[metadata]
name = pylogcq-tcarwash
version = 0.6.1
author = Tyler Carr
author_email = tcarwash@gmail.com
description = A simple curses based log for amateur radio use
long_description = file: README.md long_description_content_type = text/markdown
url = https://github.com/tcarwash/pylogcq
project_urls =
    Bug Tracker = https://github.com/tcarwash/pylogcq
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.5
install_requires =
    npyscreen>=4.10.5

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    cq = pylogcq.cq:main
    logconv = pylogcq.log_convert:main
